@@ -71,6 +71,7 @@ Engine fixes:
 * Reworked camera speed curve to prevent graphical "wiggle" during slow movement.
 * Fix missing effect description text in power tooltips when using built-in types.
 * Fix static events not executing on the same frame as on_load events.
+* Fix parsing bug in power trees that would save base power properties to an upgrade power.
 
 Game updates:
 
